# Agentic_ai_journey

./: README.md
crew_flow_intro/: README.md  pyproject.toml
crew_flow_intro/src/crew_flow_intro/: main.py  mbain.py
crewai_hello/: pyproject.toml
crewai_hello/src/crewai_hello/: __init__.py
litellm_intro/: .env  pyproject.toml
litellm_intro/src/litellm_intro/: __init__.py  main.py
