[project]
name = "crewai-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asad777", email = "muhammadasad7.7.2007@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
crewai-hello = "crewai_hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
